[package]
name = "pikacze_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.16", features = ["server", "http1", "http2", "tcp", "stream"] }
tokio = { version = "1.15.0", features = ["rt-multi-thread", "net", "macros", "fs", "tracing"] }
futures = "0.3.19"
log = "0.4.14"
thiserror = "1.0.30"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
tracing = "0.1.36"
pico-args = "0.5.0"
zeroize = "1.5.7"
argon2 = "0.4.1"
dashmap = "5.4.0"
nom = "7.1.1"
urlencoding = "2.1.3"

[target.'cfg(target_os = "linux")'.dependencies.systemd-socket-activation]
features = ["dlopen"]
git = "https://github.com/aQaTL/systemd-socket-activation.git"
tag = "v1.1.0"

